data/logs/scraper_2025-03-27_19-45-40.log
[+] Starte Scraper im Container d6cc68c65561 (2025-03-27_19-45-40)

Traceback (most recent call last):
  File "/app/main.py", line 12, in <module>
    from urls import watchlist_urls
  File "/app/urls.py", line 3
    "Twitter AfD": ": "https://nitter.space/AfD",
                                               ^
SyntaxError: unterminated string literal (detected at line 3)
